refactor: Added missing dependencies & pnpm lock file - Added '@loadable/component' dependency for dynamic component loading. - Added 'tslib' dependency for TypeScript helpers

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "@apollo/react-ssr": "4.0.0",
+    "@loadable/component": "^5.16.4",
     "@loadable/server": "5.16.5",
     "@loadable/webpack-plugin": "5.15.2",
     "@reduxjs/toolkit": "2.3.0",
@@ -102,6 +103,7 @@
     "react-helmet-async": "2.0.5",
     "react-redux": "9.1.2",
     "react-router-dom": "6.27.0",
-    "serialize-javascript": "6.0.2"
+    "serialize-javascript": "6.0.2",
+    "tslib": "^2.8.1"
   }
 }
