feat: update dependencies and add SWC plugin for loadable components
- Updated `@rspack/cli` and `@rspack/core` to version 1.1.0.
- Updated `@swc/core` to version 1.7.40.
- Added `@swc/plugin-loadable-components` version 4.0.0.
- Updated `pnpm-lock.yaml` to reflect the new dependency versions.
- Configured SWC to use the `@swc/plugin-loadable-components

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@rspack/cli": "1.0.14",
-    "@rspack/core": "1.0.14",
+    "@rspack/cli": "1.1.0",
+    "@rspack/core": "1.1.0",
     "@rspack/plugin-react-refresh": "1.0.0",
     "@svgr/webpack": "8.1.0",
-    "@swc/core": "1.7.39",
+    "@swc/core": "1.7.40",
+    "@swc/plugin-loadable-components": "4.0.0",
     "@testing-library/jest-dom": "6.6.2",
     "@testing-library/preact": "3.2.4",
     "@testing-library/react": "16.0.1",
